--- a/src/locations/locations.css
+++ b/src/locations/locations.css
@@ -96,9 +96,13 @@
   .hero__location__spacer .hero_image_about img {   
     height: 100%;
   }
+  /*
+  remove pseudo elements on this page
+  */
   .locations__map .hero__container__about__main::after,
   .locations__map .hero__container__about__main::before {   
     width: 0%;
-    height: 0px;    
+    height: 0px; 
+    background-image: none;   
   }
 }
